--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Odin Etch-A-Sketch</h1>
     <div id="container">
 
+    </div>
+    <div class="menu">
+        <button id="reset">Reset Grid</button>
     </div>
 </body>
 </html>
