--- a/index.html
+++ b/index.html
@@ -12,19 +12,28 @@
 <body>  
     <h1>Odin Etch-A-Sketch Attempts</h1>
     <div class="menu">
-        <button id="reset">Reset Grid</button>
         <button id="first">First Attempt (2023)</button>
         <button id="second">Second Attempt (2025)</button>
         <button id="reset-app">Reset App</button>
     </div>
     <div id="container">
-        
+        <style>
+            #container {
+                margin:auto;
+                width: 30%;
+                margin-top:20px;
+                margin-bottom: 20px;
+            }
+        </style>
+        Please select a version above to load the Etch-A-Sketch app.
     </div>
     <div class="journal">
             <span class="signature">bobby - 12/6/2025 should be in bed but about to start Etch-A-Sketch 2.</span>
+            <p>
             <hr>
-            I think in like '23 I came across <a href="https://theodinproject.com">the odin project</a>. The Etch-A-Sketch project is a challenge towards the ends of the foundations course. As I have taught web development undergraduate and grad courses, I have created this over and over. Each time, I try to not look at the previous code. This will not be true this time cause I got to clean up some gross css and make this presentable. 
+            I think in like '23 I came across <a href="https://theodinproject.com">the odin project</a> for the first time. The <a href="https://www.theodinproject.com/lessons/foundations-etch-a-sketch">Etch-A-Sketch project</a> is a challenge towards the ends of the foundations course. As I have taught web development undergraduate and grad courses, I have created this over and over. Each time, I try to not look at the previous code. This will not be true this time cause I got to clean up some gross css and make this presentable. 
             <hr>
+            </p>
     </div>
 </body>
 </html>
