Complete grid autocreate in 3 sizes.

--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
             <hr>
             </p>
     </div>
+    <div class="journal">
+        <div class="signature">bobby -12/8/2025 - should be in sleeping</div>
+        <p>
+            I really do like coding. There are a million easy ways to make this thing, but I got a bug in my ear to try and make the knobs go. Here we go. So tonight I completed the grid and the resizing. I think I will remove the input and keep it to buttons only. No one wants to type. Next I need to build a pointer that can search by class and reset the class to a grid filled or whatever it is called form v1. Might as well reuse it incase I extend them so they will both work. 
+        </p>
+    </div>
 </body>
 </html>
